<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2019 Razeware LLC
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in
  ~ all copies or substantial portions of the Software.
  ~
  ~ Notwithstanding the foregoing, you may not use, copy, modify, merge, publish,
  ~ distribute, sublicense, create a derivative work, and/or sell copies of the
  ~ Software in any work that is designed, intended, or marketed for pedagogical or
  ~ instructional purposes related to programming, coding, application development,
  ~ or information technology.  Permission for such use, copying, modification,
  ~ merger, publication, distribution, sublicensing, creation of derivative works,
  ~ or sale is expressly withheld.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  ~ THE SOFTWARE.
  -->

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/inboxFragment">

    <fragment
        android:id="@+id/inboxFragment"
        android:name="com.shobanasha.navigationGraph.fragment.InboxFragment"
        android:label="@string/menu_inbox"
        tools:layout="@layout/fragment_inbox">
        <action
            android:id="@+id/presentLetter"
            app:destination="@id/presentationFragment" />
    </fragment>
    <fragment
        android:id="@+id/sentFragment"
        android:name="com.shobanasha.navigationGraph.fragment.SentFragment"
        android:label="@string/menu_sent"
        tools:layout="@layout/fragment_sent">
        <action
            android:id="@+id/presentLetter"
            app:destination="@id/presentationFragment" />
    </fragment>
    <fragment
        android:id="@+id/createLetterFragment"
        android:name="com.shobanasha.navigationGraph.fragment.CreateLetterFragment"
        android:label="@string/create_letter"
        tools:layout="@layout/fragment_create_letter" />
    <dialog
        android:id="@+id/editProfileFragment"
        android:name="com.shobanasha.navigationGraph.fragment.EditProfileFragment"
        android:label="@string/edit_profile"
        tools:layout="@layout/fragment_edit_profile" />
    <fragment
        android:id="@+id/presentationFragment"
        android:name="com.shobanasha.navigationGraph.fragment.PresentationFragment"
        android:label="@string/presentation"
        tools:layout="@layout/fragment_presentation">
        <argument
            android:name="letter"
            app:argType="string" />
        <deepLink
            android:id="@+id/deepLink3"
            app:uri="www.loveletter.com/letter/{letter}" />
    </fragment>
    <include app:graph="@navigation/agreement_graph" />
    <fragment
        android:id="@+id/splashFragment"
        android:name="com.shobanasha.navigationGraph.fragment.SplashFragment"
        android:label="SplashFragment" />
</navigation>